# windcode

./: .gitignore  AGENTS.md  README.md  hatch_build.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  sandbox.yml
.windcode/: config.toml.example
.windcode/skills/code-review/: SKILL.md
examples/: 01_stateful_chat.py  02_custom_tool.py  03_multi_agent.py  04_mcp_tools.py  05_skill.py  06_stream_and_cancel.py  07_bash_approval.py  README.md
examples/skills/release_notes/: SKILL.md
native/windows-sandbox/: Cargo.toml  README.md
native/windows-sandbox/ci/: contract.py
native/windows-sandbox/src/: main.rs  windows.rs
spec/: checklist.md  task.md
spec/5 long-term-memory/: checklist.md  plan.md  spec.md  task.md
spec/extension-runtime/: checklist.md  plan.md  spec.md  task.md
spec/init project/: checklist.md  plan.md  spec.md
spec/multi-agent-orchestration/: checklist.md  plan.md  spec.md  task.md
spec/tui-refresh/: checklist.md  plan.md  spec.md  task.md
src/windcode/: __init__.py  __main__.py  _fsync.py  cli.py  sdk.py  types.py
src/windcode/auth/: __init__.py  store.py
src/windcode/config/: __init__.py  loader.py  models.py  paths.py  writer.py
src/windcode/context/: __init__.py  compactor.py  estimator.py  truncation.py
src/windcode/domain/: __init__.py  errors.py  events.py  messages.py  models.py  subagents.py  tools.py
src/windcode/extensions/: __init__.py  commands.py  discovery.py  events.py  models.py  paths.py  runtime.py  service.py  snapshot.py  state.py
src/windcode/instructions/: __init__.py  loader.py
src/windcode/memory/: __init__.py  extraction.py  models.py  refiner.py  security.py  service.py  store.py
src/windcode/observability/: __init__.py  redaction.py  trace.py
src/windcode/policy/: __init__.py  commands.py  engine.py  models.py  rules.py
src/windcode/providers/: __init__.py  _utils.py  anthropic.py  base.py  catalog.py  errors.py  models.py  openai_compat.py  openai_responses.py  registry.py
src/windcode/runtime/: __init__.py  control.py  event_bus.py  loop.py  process.py  prompts.py  report.py  retry.py  scheduler.py
src/windcode/sandbox/: __init__.py  base.py  bwrap.py  factory.py  models.py  seatbelt.py  windows.py
src/windcode/sessions/: __init__.py  artifacts.py  models.py  store.py  tree.py
src/windcode/tools/: __init__.py  agent_collaboration.py  apply_patch.py  ask_user.py  builtins.py  edit_file.py  filesystem.py  glob.py  grep.py  memory.py  (+4 more)
tests/contract/: test_anthropic.py  test_openai_compat.py  test_openai_responses.py
tests/e2e/: test_coding_task.py  test_multi_agent_coding_task.py
tests/integration/: test_agent_loop.py  test_cli_tui.py  test_model_fallback.py  test_run_handle.py  test_runtime_approval.py  test_runtime_compaction.py  test_sdk.py  test_security.py  test_session_crash_recovery.py  test_subagent_approval.py  test_subagent_cancellation.py  test_subagent_integration.py  test_subagent_recovery.py  test_subagent_runtime.py
tests/smoke/: test_real_providers.py
tests/unit/: test_artifacts.py  test_auth_store.py  test_bwrap.py  test_cli.py  test_compactor.py  test_config_loader.py  test_config_models.py  test_config_writer.py  test_context_truncation.py  test_errors.py  test_event_bus.py  test_events.py  test_filesystem_helpers.py  test_instructions.py  test_policy_engine.py  test_policy_models.py  test_prompts.py  test_provider_catalog.py  test_provider_errors.py  test_provider_registry.py  test_redaction.py  test_run_control.py  test_run_report.py  test_scheduler.py  test_session_models.py  test_session_recovery.py  test_session_store_append.py  test_session_tree.py  test_subagent_budgets.py  test_subagent_coordinator.py  test_subagent_events.py  test_subagent_models.py  test_subagent_roles.py  test_subagent_verification.py  test_token_estimator.py  test_tool_registry.py  test_trace.py  test_worktree_manager.py
(+75 files in other folders)
