[project]
name = "windcode"
version = "0.1.0"
description = "A safe, extensible terminal coding agent"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "aiohttp>=3.12.0",
    "anthropic[aiohttp]>=0.98.0",
    "httpx>=0.28.0,<1",
    "jsonschema>=4.25.0,<5",
    "mcp>=1.10.0,<2",
    "openai[aiohttp]>=2.34.0",
    "platformdirs>=4.3.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.2,<7",
    "textual>=6.0.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
windcode = "windcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windcode"]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
