[project]
name = "windcode"
version = "0.2.1"
description = "A safe, extensible terminal coding agent"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE*"]
authors = [
    { name = "Tingfeng347" },
]
keywords = ["ai", "agent", "coding-assistant", "cli", "mcp", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "aiohttp>=3.12.0",
    "anthropic[aiohttp]>=0.98.0",
    "httpx>=0.28.0,<1",
    "jsonschema>=4.25.0,<5",
    "mcp>=1.10.0,<2",
    "openai[aiohttp]>=2.34.0",
    "platformdirs>=4.3.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.2,<7",
    "textual>=6.0.0",
    "tree-sitter>=0.25.0,<0.26",
    "tree-sitter-bash>=0.25.0,<0.26",
    "tomli-w>=1.2.0",
]

[project.scripts]
windcode = "windcode.cli:main"

[project.urls]
Homepage = "https://github.com/tingfeng347/windcode"
Repository = "https://github.com/tingfeng347/windcode"
Issues = "https://github.com/tingfeng347/windcode/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windcode"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
