[package]
name = "windcode-sandbox"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
